// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoMatch/> Component render component trying to reach <User/> component with no username 1`] = `
<div>
  <div
    class="sc-eCssSg fEobmb uk-animation-fade uk-padding-large"
  >
    <div>
      <img
        alt="not found"
        class="sc-hKgILt cNbHLb"
        src="search.svg"
      />
      <h3
        class="sc-dmlrTW jDCTgQ uk-margin-small"
      >
        We're looking for 
        <code
          class="sc-kfzAmx AFNMD"
        >
          /user/
        </code>
         but we don't have any results
      </h3>
    </div>
    <div
      class="uk-margin"
    >
      <a
        href="/"
      >
        <code
          class="sc-kfzAmx AFNMD"
        >
          Return to the main page
        </code>
      </a>
    </div>
  </div>
</div>
`;

exports[`<NoMatch/> Component render component without route provided 1`] = `
<div>
  <div
    class="sc-eCssSg fEobmb uk-animation-fade uk-padding-large"
  >
    <div>
      <img
        alt="not found"
        class="sc-hKgILt cNbHLb"
        src="search.svg"
      />
      <h3
        class="sc-dmlrTW jDCTgQ uk-margin-small"
      >
        We're looking for 
        <code
          class="sc-kfzAmx AFNMD"
        >
          /
        </code>
         but we don't have any results
      </h3>
    </div>
    <div
      class="uk-margin"
    >
      <a
        href="/"
      >
        <code
          class="sc-kfzAmx AFNMD"
        >
          Return to the main page
        </code>
      </a>
    </div>
  </div>
</div>
`;
